[package]
name = "boundless"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
byteorder = "1.4.3"
bitbuffer = "0.10.5"
parking_lot = "0.12.0"

[target.'cfg(windows)'.dependencies]
widestring = "0.5.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.35.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
]