[package]
name = "boundless"
version = "0.1.0"
edition = "2021"
authors = ["Austin <me@austinj.work>"]
description = "Keyboard/Mouse/Audio Sharing Utility"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities", "multimedia::audio"]
keywords = ["keyboard", "mouse", "audio", "kvm"]

[dependencies]
atomicring = "1.2.9"
parking_lot = "0.12.0"
strum = { version = "0.24", features = ["derive"] }
k256 = { version = "0.10.4", features = ["ecdh", "ecdsa"] }
chacha20poly1305 = "0.9.0"
rand_chacha = "0.3.1"
rand = "0.8.5"
blake3 = "1.3.1"
machine-uid = "0.2.0"
hex = "0.4.3"
dirs = "4.0.0"
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"

[target.'cfg(unix)'.dependencies]
evdev-rs = "0.5.0"
libpulse-binding = "2.26.0"
libpulse-simple-binding = "2.25.0"

[target.'cfg(windows)'.dependencies]
widestring = "0.5.1"
u16cstr = "0.3.0"
lazy_static = "1.4.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.35.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_System_Com_StructuredStorage",
]